fixing the help and resources popup positions and overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -183,48 +183,51 @@ img {
 }
 
 
-
 /* PopUps */
 .resourse-popup, .help-popup{
-    display: none;
-    background-color: rgba(255, 255, 255, .8);
-    position: fixed;
-    top: 0;
-    right:0;
-    z-index:10000;
-    width: 100%;
-  }
-  .help-content {
-    overflow: auto;
-    width:835px;
-    height:76vh;
-    font-size:30px;
-  }
-  .resource-content{
-    overflow: auto;
+  display: none;
+  background-color: rgba(255, 255, 255, .8);
+  position: fixed;
+  top: 0;
+  right:0;
+  z-index:10000;
+  width: 100%;
+}
+.help-content {
+  overflow: auto;
+  width:835px;
+  height:76vh;
+  font-size:30px;
+}
+.help-content p{
+  margin-top: 20px;
+  margin-left: 1rem;
+}
+.resource-content{
+  overflow: auto;
   width:100%;
-  height:100%;
-  
-  }
-  .resource-container , .help-container {
-    position:relative;
-    width: 50%;
-    background-color: white;
-    margin: 0 auto;
-    margin-top: 80px;
-    margin-bottom: 70px;
-    border:5px solid rgb(245, 130, 31);
-    border-radius: 20px;
-  }
-  .resource-img{
-    padding:20px;
-    margin:20px;
-  }
-  .closeBtn {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width:50px;
-    height:50px;
-    cursor:pointer;
-  }
+  height:76vh;
+
+}
+.resource-container , .help-container {
+  position:relative;
+  overflow: hidden;
+  background-color: white;
+  margin: 0 auto;
+  margin-top: 80px;
+  margin-bottom: 70px;
+  border:3px solid rgb(245, 130, 31);
+  border-radius: 20px;
+}
+.resource-img{
+  padding:10px;
+  margin:10px;
+}
+.closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  width:30px;
+  height:30px;
+  cursor:pointer;
+}
